<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/RelativeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/loginIcon"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/loginTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/login_icon" />

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="260dp"
            android:layout_height="36dp"
            android:text="@string/registration_screen_textfield"
            android:textAlignment="center"
            android:textColor="@color/purple_3"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/sendVerificationButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.492" />

        <TextView
            android:id="@+id/loginSubtitle"
            android:layout_width="223dp"
            android:layout_height="35dp"
            android:text="@string/registration_screen_login_subtitle"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

        <Button
            android:id="@+id/sendVerificationButton"
            android:layout_width="292dp"
            android:layout_height="72dp"
            android:layout_marginBottom="92dp"
            android:backgroundTint="@color/purple_3"
            android:text="@string/registration_screen_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="262dp"
            android:layout_height="76dp"
            android:ems="10"
            android:hint="@string/registration_screen_example_number"
            android:autofillHints="phone"
            android:inputType="phone"
            app:layout_constraintBottom_toTopOf="@+id/sendVerificationButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTextView"
            app:layout_constraintVertical_bias="0.7" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>